Provide method to create search URL. Define global version. Bring in identity module.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
             apiKey: 'test'
           });
 
-          window.console.log(constructorio.Search().get());
+          window.console.log(constructorio.Search().get({
+            term: 'dogs'
+          }));
         }
       }());
     </script>
